fix(like):  card spacing

--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -1,7 +1,7 @@
 .card__description {
   display: flex;
   padding-bottom: 29px;
-  margin: 0 auto;
+  margin: 13px auto;
   justify-content: space-between;
   max-width: 246px;
   min-height: 23px;
